making nav with pages for about, gallery

--- a/index.html
+++ b/index.html
@@ -3,30 +3,21 @@
 
 <head>
 
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>BADPONY | Home</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@700&display=swap" rel="stylesheet">
+
+    <title>TCG | Home</title>
 
 <!-- page-icon --->
 <link rel="shortcut icon" href="https://i.postimg.cc/qqfYFtXt/bad-pony-vector-newlogo.png">
 
-<!--x page-icon -x-->
-
-
-<!-- fontawesome icons -->
-<link rel="stylesheet" href="./css/all.css">
-
-<!-- owl carousel -->
-<link rel="stylesheet" href="./css/owl.carousel.min.css">
-<link rel="stylesheet" href="./css/owl.theme.default.min.css">
-
-<!--Custom style --->
-<link rel="stylesheet" href="style.css">
-
 </head>
-<!-- animation -->
+<!-- fade in animation -->
 <style>
       body {
           animation: fadeInAnimation ease 3s;
@@ -42,7 +33,6 @@
           }
       }
   </style>
-<!-- x animation x-->
 
 <body>
 
@@ -50,13 +40,13 @@
 <nav class="nav">
   <div class="nav-menu flex-row">
     <div class="nav-brand">
-    <a href="#" class="text-white">BADPONY</a>
+    <a href="#" class="text-white">TCG</a>
   </div>
   <div>
     <ul class="nav-items">
       <li class="nav-link"><a href="index.html">Home</a></li>
-      <li class="nav-link"><a href="shop.html">Shop</a></li>
-      <li class="nav-link"><a href="contact.html">Contact</a></li>
+      <li class="nav-link"><a href="about.html">About</a></li>
+      <li class="nav-link"><a href="gallery.html">Gallery</a></li>
       </ul>
   </div>
   <div>
