--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <nav class="nav">
   <div class="nav-menu flex-row">
     <div class="nav-brand">
-    <a href="#" class="text-white">TCG</a>
+    <a href="tcg.net">TCG</a>
   </div>
   <div>
     <ul class="nav-items">
@@ -51,31 +51,27 @@
   </div>
   <div>
   <div class="social text">
-    <a href="https://www.instagram.com/badpony.shop/?hl=en"><i class="fab fa-instagram"></i></a>
+    <a href="https://www.instagram.com/kwantumkid/?hl=en"><i class="fab fa-instagram"></i></a>
     </div>
     </div>
 
 </nav>
 
-<!--x- Navigation -x-->
-
 <!-- Main site -->
 <main>
-
-<!-- site title -->
+  
 <section class="site-title">
   <div class="site-background"></div>
-  <h1>Your move.</h1>
-  <h3><i>New items available this summer</i></h3>
-    <button class="btn"><a href="shop.html">Shop Now</a></button>
+  <h1>Think. Create. Grow.</h1>
+  <h3><i>Exploring creativity from all angles</i></h3>
+    <button class="btn"><a href="shop.html">Learn More</a></button>
 </section>
-<!--x- site title -x-->
 
 </main>
 
 <!---footer--->
 <footer class="sticky-footer">
-<p>© 2021 OB Beyond Design LLC | Built by OB</p>
+<p>© 2021 TCG | Built by OB</p>
 </footer>
 
 </body>
