--- a/gallery.html
+++ b/gallery.html
@@ -65,9 +65,7 @@
 <!-- site title -->
 <section class="site-title">
   <div class="site-background"></div>
-  <h1>Your move.</h1>
-  <h3><i>New items available this summer</i></h3>
-    <button class="btn"><a href="shop.html">Shop Now</a></button>
+  <h1><i>Page Coming soon</i></h1>
 </section>
 <!--x- site title -x-->
 
