code cleanup + media queries for responsive, mobile

--- a/about.html
+++ b/about.html
@@ -61,19 +61,21 @@
 
 <!-- Main site -->
 <main>
+  <section id="about">
+              <h3><i>About TCG</i></h3>
 
-<!-- site title -->
-<section class="site-title">
-  <div class="site-background"></div>
-  <h1><i>Page Coming soon</i></h1>
+                <figure>
+                <img src="https://i.ibb.co/LknZ9Q7/tcg-3.jpg" alt="Artisitc shot of a man posing in front of buildings" border="0"></a>
+                <figcaption class="image-caption-text">TCG Founder Ryan Pierce</figcaption>
+                </figure>
+              <p>"Think, Create, Grow" or TCG, is an Orando-based creative group specializing in photography, videography, editing, and production. A lifelong artist, founder Ryan Pierce strives to materialize the views of each client while maintaining a signature style founded in the core elements of design.</p>
+              <p>TCG collaborates with artists and inviduals from all backgrounds and walks of life. Such is the goal of TCG: to create a community of creative individuals that thrive on the exchange and cultivation of art and ideas. </p>
 </section>
-<!--x- site title -x-->
-
 </main>
 
 <!---footer--->
 <footer class="sticky-footer">
-<p>© 2021 OB Beyond Design LLC | Built by OB</p>
+<p>© 2021 TCG | Built by OB</p>
 </footer>
 
 </body>
