--- a/index.html
+++ b/index.html
@@ -59,12 +59,12 @@
 
 <!-- Main site -->
 <main>
-  
+
 <section class="site-title">
   <div class="site-background"></div>
   <h1>Think. Create. Grow.</h1>
   <h3><i>Exploring creativity from all angles</i></h3>
-    <button class="btn"><a href="shop.html">Learn More</a></button>
+    <button class="btn"><a href="about.html">Learn More</a></button>
 </section>
 
 </main>
