--- a/gallery.html
+++ b/gallery.html
@@ -62,18 +62,47 @@
 <!-- Main site -->
 <main>
 
-<!-- site title -->
-<section class="site-title">
-  <div class="site-background"></div>
-  <h1><i>Page Coming soon</i></h1>
-</section>
-<!--x- site title -x-->
+  <!-- Slideshow container -->
+ <div class="slideshow-container">
 
+   <!-- Full-width images with number and caption text -->
+   <div class="mySlides fade">
+     <div class="numbertext">1 / 3</div>
+     <img src="tcg_1.jpg" style="width:100%">
+     <div class="text">Caption Text</div>
+   </div>
+
+   <div class="mySlides fade">
+     <div class="numbertext">2 / 3</div>
+     <img src="tcg_2.jpg" style="width:100%">
+     <div class="text">Caption Two</div>
+   </div>
+
+   <div class="mySlides fade">
+     <div class="numbertext">3 / 3</div>
+     <img src="tcg_3.jpg" style="width:100%">
+     <div class="text">Caption Three</div>
+   </div>
+
+   <!-- Next and previous buttons -->
+   <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+   <a class="next" onclick="plusSlides(1)">&#10095;</a>
+ </div>
+ <br>
+
+ <!-- The dots/circles -->
+ <div style="text-align:center">
+   <span class="dot" onclick="currentSlide(1)"></span>
+   <span class="dot" onclick="currentSlide(2)"></span>
+   <span class="dot" onclick="currentSlide(3)"></span>
+ </div>
 </main>
+
+<h3><i>This page is currently under consctruction. Please come back later to see the full gallery!</i></h3>
 
 <!---footer--->
 <footer class="sticky-footer">
-<p>© 2021 OB Beyond Design LLC | Built by OB</p>
+<p>© 2021 TCG | Built by OB</p>
 </footer>
 
 </body>
