--- a/about.html
+++ b/about.html
@@ -10,11 +10,12 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 
     <title>TCG | Home</title>
 
 <!-- page-icon --->
-<link rel="shortcut icon" href="https://i.postimg.cc/qqfYFtXt/bad-pony-vector-newlogo.png">
+<link rel="shortcut icon" href="#">
 
 </head>
 <!-- fade in animation -->
@@ -38,23 +39,23 @@
 
 <!--- Navigation ---->
 <nav class="nav">
-  <div class="nav-menu flex-row">
+  <nav class="nav-menu flex-row">
     <div class="nav-brand">
-    <a href="#" class="text-white">TCG</a>
+    <a href="index.html"><img src="https://i.ibb.co/hcskmyL/tcg-logo-tiny.png" alt="tcg-logo-tiny" border="0"></a>
   </div>
-  <div>
-    <ul class="nav-items">
+  <h1>TCG</h1>
+  <div class="element">
+    <ul class="nav-items" id="navList">
       <li class="nav-link"><a href="index.html">Home</a></li>
       <li class="nav-link"><a href="about.html">About</a></li>
       <li class="nav-link"><a href="gallery.html">Gallery</a></li>
       </ul>
+    
+      <a href="#" onclick="navData()" class="navIcon">
+        <i class="fas fa-bars"></i>
+      </a>
   </div>
-  <div>
-  <div class="social text">
-    <a href="https://www.instagram.com/badpony.shop/?hl=en"><i class="fab fa-instagram"></i></a>
-    </div>
-    </div>
-
+ 
 </nav>
 
 <!--x- Navigation -x-->
@@ -64,12 +65,26 @@
   <section id="about">
               <h3><i>About TCG</i></h3>
 
+          <div class="about-content">              
+            <div>
                 <figure>
-                <img src="https://i.ibb.co/LknZ9Q7/tcg-3.jpg" alt="Artisitc shot of a man posing in front of buildings" border="0"></a>
-                <figcaption class="image-caption-text">TCG Founder Ryan Pierce</figcaption>
-                </figure>
+                  <img src="https://i.ibb.co/LknZ9Q7/tcg-3.jpg" alt="Artisitc shot of a man posing in front of buildings" border="0"></a>
+                  <figcaption class="image-caption-text">TCG Founder Ryan Pierce</figcaption>
+                  </figure>
+                <p>"Think, Create, Grow" or TCG, is an Orando-based creative group specializing in photography, videography, editing, and production. A lifelong artist, founder Ryan Pierce strives to materialize the views of each client while maintaining a signature style founded in the core elements of design.</p>
+                <p>TCG collaborates with artists and inviduals from all backgrounds and walks of life. Such is the goal of TCG: to create a community of creative individuals that thrive on the exchange and cultivation of art and ideas. </p>
+            </div>
+               
+            <div>
+              <figure>
+              <img src="https://i.ibb.co/LknZ9Q7/tcg-3.jpg" alt="Two artists laughing on set" border="0"></a>
+              <figcaption class="image-caption-text">Ryan and Drew</figcaption>
+              </figure>
               <p>"Think, Create, Grow" or TCG, is an Orando-based creative group specializing in photography, videography, editing, and production. A lifelong artist, founder Ryan Pierce strives to materialize the views of each client while maintaining a signature style founded in the core elements of design.</p>
               <p>TCG collaborates with artists and inviduals from all backgrounds and walks of life. Such is the goal of TCG: to create a community of creative individuals that thrive on the exchange and cultivation of art and ideas. </p>
+            </div>
+          </div>
+
 </section>
 </main>
 
@@ -78,5 +93,6 @@
 <p>© 2021 TCG | Built by OB</p>
 </footer>
 
+<script src="./script.js"></script>
 </body>
 </html>
