formatting headings, paragraphs

--- a/about.html
+++ b/about.html
@@ -50,12 +50,12 @@
       <li class="nav-link"><a href="about.html">About</a></li>
       <li class="nav-link"><a href="gallery.html">Gallery</a></li>
       </ul>
-    
+
       <a href="#" onclick="navData()" class="navIcon">
         <i class="fas fa-bars"></i>
       </a>
   </div>
- 
+
 </nav>
 
 <!--x- Navigation -x-->
@@ -63,24 +63,22 @@
 <!-- Main site -->
 <main>
   <section id="about">
-              <h3><i>About TCG</i></h3>
+              <h2><i>About TCG</i></h2>
 
-          <div class="about-content">              
+          <div class="about-content">
             <div>
                 <figure>
-                  <img src="https://i.ibb.co/LknZ9Q7/tcg-3.jpg" alt="Artisitc shot of a man posing in front of buildings" border="0"></a>
+                  <img src="https://i.ibb.co/jr7PD36/tcg-ryan.jpg" alt="Artisitc shot of a man posing in front of buildings" border="0"></a>
                   <figcaption class="image-caption-text">TCG Founder Ryan Pierce</figcaption>
                   </figure>
                 <p>"Think, Create, Grow" or TCG, is an Orando-based creative group specializing in photography, videography, editing, and production. A lifelong artist, founder Ryan Pierce strives to materialize the views of each client while maintaining a signature style founded in the core elements of design.</p>
-                <p>TCG collaborates with artists and inviduals from all backgrounds and walks of life. Such is the goal of TCG: to create a community of creative individuals that thrive on the exchange and cultivation of art and ideas. </p>
             </div>
-               
+
             <div>
               <figure>
-              <img src="https://i.ibb.co/LknZ9Q7/tcg-3.jpg" alt="Two artists laughing on set" border="0"></a>
+              <img src="https://i.ibb.co/sK3cbwy/tcg-drew.jpg" alt="Two artists laughing on set" border="0"></a>
               <figcaption class="image-caption-text">Ryan and Drew</figcaption>
               </figure>
-              <p>"Think, Create, Grow" or TCG, is an Orando-based creative group specializing in photography, videography, editing, and production. A lifelong artist, founder Ryan Pierce strives to materialize the views of each client while maintaining a signature style founded in the core elements of design.</p>
               <p>TCG collaborates with artists and inviduals from all backgrounds and walks of life. Such is the goal of TCG: to create a community of creative individuals that thrive on the exchange and cultivation of art and ideas. </p>
             </div>
           </div>
