contact page added

--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 
-
     <title>TCG | Home</title>
 
 <!-- page-icon --->
@@ -59,24 +58,38 @@
 
 </nav>
 
+<!--x- Navigation -x-->
+
 <!-- Main site -->
 <main>
+  <section id="about">
+              <h2><i>About TCG</i></h2>
 
-<section class="site-title">
-  <div class="site-background"></div>
-  <h1>Think. Create. Grow.</h1>
-  <h3><i>Exploring creativity from all angles</i></h3>
-    <button class="btn"><a href="about.html">Learn More</a></button>
+          <div class="about-content">
+            <div>
+                <figure>
+                  <img src="https://i.ibb.co/jr7PD36/tcg-ryan.jpg" alt="Artisitc shot of a man posing in front of buildings" border="0"></a>
+                  <figcaption class="image-caption-text">TCG Founder Ryan Pierce</figcaption>
+                  </figure>
+                <p>"Think, Create, Grow" or TCG, is an Orando-based creative group specializing in photography, videography, editing, and production. A lifelong artist, founder Ryan Pierce strives to materialize the views of each client while maintaining a signature style founded in the core elements of design.</p>
+            </div>
+
+            <div>
+              <figure>
+              <img src="https://i.ibb.co/sK3cbwy/tcg-drew.jpg" alt="Two artists laughing on set" border="0"></a>
+              <figcaption class="image-caption-text">Ryan and Drew</figcaption>
+              </figure>
+              <p>TCG collaborates with artists and inviduals from all backgrounds and walks of life. Such is the goal of TCG: to create a community of creative individuals that thrive on the exchange and cultivation of art and ideas. </p>
+            </div>
+          </div>
+
 </section>
-
 </main>
 
 <!---footer--->
 <footer class="sticky-footer">
 <p>© 2021 TCG | Built by OB</p>
 </footer>
-
-
 
 <script src="./script.js"></script>
 </body>
