--- a/gallery.html
+++ b/gallery.html
@@ -47,6 +47,8 @@
       <li class="nav-link"><a href="index.html">Home</a></li>
       <li class="nav-link"><a href="about.html">About</a></li>
       <li class="nav-link"><a href="gallery.html">Gallery</a></li>
+      <li class="nav-link"><a href="contact.html">Contact</a></li>
+      <li class="nav-link"><a href="services.html">Services</a></li>
       </ul>
   </div>
   <div>
