--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
       <li class="nav-link"><a href="index.html">Home</a></li>
       <li class="nav-link"><a href="about.html">About</a></li>
       <li class="nav-link"><a href="gallery.html">Gallery</a></li>
+      <li class="nav-link"><a href="contact.html">Contact</a></li>
+      <li class="nav-link"><a href="services.html">Services</a></li>
       </ul>
 
       <a href="#" onclick="navData()" class="navIcon">
