page names and nav updated, looking clean

--- a/gallery.html
+++ b/gallery.html
@@ -11,7 +11,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@700&display=swap" rel="stylesheet">
 
-    <title>TCG | Home</title>
+    <title>TCG | Gallery</title>
 
 <!-- page-icon --->
 <link rel="shortcut icon" href="https://i.postimg.cc/qqfYFtXt/bad-pony-vector-newlogo.png">
@@ -45,7 +45,7 @@
   <div>
     <ul class="nav-items">
       <li class="nav-link"><a href="index.html">Home</a></li>
-      <li class="nav-link"><a href="about.html">About</a></li>
+      <li class="nav-link"><a href="about.html">Info</a></li>
       <li class="nav-link"><a href="gallery.html">Gallery</a></li>
       <li class="nav-link"><a href="contact.html">Contact</a></li>
       <li class="nav-link"><a href="services.html">Services</a></li>
@@ -53,7 +53,7 @@
   </div>
   <div>
   <div class="social text">
-    <a href="https://www.instagram.com/badpony.shop/?hl=en"><i class="fab fa-instagram"></i></a>
+    <a href="#"><i class="fab fa-instagram"></i></a>
     </div>
     </div>
 
@@ -104,7 +104,7 @@
 
 <!---footer--->
 <footer class="sticky-footer">
-<p>© 2021 TCG | Built by OB</p>
+<p>© 2021 TGC | Built by OB</p>
 </footer>
 
 </body>
