--- a/index.html
+++ b/index.html
@@ -48,10 +48,12 @@
   <div class="element">
     <ul class="nav-items" id="navList">
       <li class="nav-link"><a href="index.html">Home</a></li>
-      <li class="nav-link"><a href="about.html">About</a></li>
+      <li class="nav-link"><a href="about.html">Info</a></li>
       <li class="nav-link"><a href="gallery.html">Gallery</a></li>
       <li class="nav-link"><a href="contact.html">Contact</a></li>
       <li class="nav-link"><a href="services.html">Services</a></li>
+
+
       </ul>
 
       <a href="#" onclick="navData()" class="navIcon">
@@ -75,7 +77,7 @@
 
 <!---footer--->
 <footer class="sticky-footer">
-<p>© 2021 TCG | Built by OB</p>
+<p>© 2021 TGC | Built by OB</p>
 </footer>
 
 
