--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 
-    <title>TCG | Home</title>
+    <title>TCG | Info</title>
 
 <!-- page-icon --->
 <link rel="shortcut icon" href="#">
@@ -47,7 +47,7 @@
   <div class="element">
     <ul class="nav-items" id="navList">
       <li class="nav-link"><a href="index.html">Home</a></li>
-      <li class="nav-link"><a href="about.html">About</a></li>
+      <li class="nav-link"><a href="about.html">Info</a></li>
       <li class="nav-link"><a href="gallery.html">Gallery</a></li>
       <li class="nav-link"><a href="contact.html">Contact</a></li>
       <li class="nav-link"><a href="services.html">Services</a></li>
@@ -65,7 +65,7 @@
 <!-- Main site -->
 <main>
   <section id="about">
-              <h2><i>About TCG</i></h2>
+              <h2><i>Our Vision</i></h2>
 
           <div class="about-content">
             <div>
@@ -73,24 +73,16 @@
                   <img src="https://i.ibb.co/jr7PD36/tcg-ryan.jpg" alt="Artisitc shot of a man posing in front of buildings" border="0"></a>
                   <figcaption class="image-caption-text">TCG Founder Ryan Pierce</figcaption>
                   </figure>
-                <p>"Think, Create, Grow" or TCG, is an Orando-based creative group specializing in photography, videography, editing, and production. A lifelong artist, founder Ryan Pierce strives to materialize the views of each client while maintaining a signature style founded in the core elements of design.</p>
+                <p>At TGC we don’t just consider ourselves the creatives, but we understand that entrepreneurs are innovators and creators themselves. We don’t like to separate things into creatives and business, but two sides of the same coin. So we want a community of creatives, entrepreneurs, and strategists all working together to get results where we all win. Whether a client or coworker, your mission is our mission. And with all that creative energy working towards one goal, success is only the beginning.
+	As a Floridian company, our goal is the growth and innovation of businesses in the central Florida area. We see the potential for Florida to be a major force for business & innovation and we want to help speed it along. And as we expand we want to do the same for other cities as well. When companies grow, the city grows with it & so we take growth very seriously. We will always look at every business as more than a client, but a pillar of our beloved city.
+</p>
             </div>
-
-            <div>
-              <figure>
-              <img src="https://i.ibb.co/sK3cbwy/tcg-drew.jpg" alt="Two artists laughing on set" border="0"></a>
-              <figcaption class="image-caption-text">Ryan and Drew</figcaption>
-              </figure>
-              <p>TCG collaborates with artists and inviduals from all backgrounds and walks of life. Such is the goal of TCG: to create a community of creative individuals that thrive on the exchange and cultivation of art and ideas. </p>
-            </div>
-          </div>
-
 </section>
 </main>
 
 <!---footer--->
 <footer class="sticky-footer">
-<p>© 2021 TCG | Built by OB</p>
+<p>© 2021 TGC | Built by OB</p>
 </footer>
 
 <script src="./script.js"></script>
