--- a/services.html
+++ b/services.html
@@ -12,7 +12,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 
-    <title>TCG | Home</title>
+    <title>TCG | Services</title>
 
 <!-- page-icon --->
 <link rel="shortcut icon" href="#">
@@ -47,7 +47,7 @@
   <div class="element">
     <ul class="nav-items" id="navList">
       <li class="nav-link"><a href="index.html">Home</a></li>
-      <li class="nav-link"><a href="about.html">About</a></li>
+      <li class="nav-link"><a href="about.html">Info</a></li>
       <li class="nav-link"><a href="gallery.html">Gallery</a></li>
       <li class="nav-link"><a href="contact.html">Contact</a></li>
       <li class="nav-link"><a href="services.html">Services</a></li>
@@ -65,32 +65,30 @@
 <!-- Main site -->
 <main>
   <section id="about">
-              <h2><i>About TCG</i></h2>
+              <h2>Services</h2>
 
           <div class="about-content">
-            <div>
-                <figure>
-                  <img src="https://i.ibb.co/jr7PD36/tcg-ryan.jpg" alt="Artisitc shot of a man posing in front of buildings" border="0"></a>
-                  <figcaption class="image-caption-text">TCG Founder Ryan Pierce</figcaption>
-                  </figure>
-                <p>"Think, Create, Grow" or TCG, is an Orando-based creative group specializing in photography, videography, editing, and production. A lifelong artist, founder Ryan Pierce strives to materialize the views of each client while maintaining a signature style founded in the core elements of design.</p>
-            </div>
+<h4>Social Media Advertising</h4>
+<p>We help clients come up with a strategy for your campaign and then create the perfect ads for client needs. And to top it off we manage the ads for Facebook & Instagram and optimize them for success as we go. This plan is a mixture of all of our services from creative to strategy and is ongoing monthly with results reporting. It can be cancelled but to start we recommend at least 3 months to see true results.</p>
 
-            <div>
-              <figure>
-              <img src="https://i.ibb.co/sK3cbwy/tcg-drew.jpg" alt="Two artists laughing on set" border="0"></a>
-              <figcaption class="image-caption-text">Ryan and Drew</figcaption>
-              </figure>
-              <p>TCG collaborates with artists and inviduals from all backgrounds and walks of life. Such is the goal of TCG: to create a community of creative individuals that thrive on the exchange and cultivation of art and ideas. </p>
-            </div>
-          </div>
+<h4>Video Production</h4>
+<p>This is for people who need a professional crew to film for their events, launches or specific commercials. We bring a team of Hollywood level filmmakers together and help you achieve the highest quality video for your commercial events. (Emphasis on events, commercials, & courses for this, we do other things but that’s what we want to niche down to).
+  Price: varies by crew size and number of days</p>
+
+<h4>Photography</h4>
+<p>Our main focus is commercial, fashion, and portrait photography. We put an emphasis on conceptual shoots and editorial photography.
+  Price: starting at $300 per shoot</p>
+
+<h4>Course Creation</h4>
+<p>Whether you’re a veteran in the digital product arena, or looking to take your first step into it, We can help you create your next online course. We help to organize lesson plans and edit the films to provide as much clarity as possible. (This is obviously a subset of video production but it is more expensive and niche so we want to let people know specifically that this is a specialty).</p>
+</div>
 
 </section>
 </main>
 
 <!---footer--->
 <footer class="sticky-footer">
-<p>© 2021 TCG | Built by OB</p>
+<p>© 2021 TGC | Built by OB</p>
 </footer>
 
 <script src="./script.js"></script>
