new nav with better text and logo

--- a/gallery.html
+++ b/gallery.html
@@ -11,7 +11,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@700&display=swap" rel="stylesheet">
 
-    <title>TCG | Gallery</title>
+    <title>TGC | Gallery</title>
 
 <!-- page-icon --->
 <link rel="shortcut icon" href="https://i.postimg.cc/qqfYFtXt/bad-pony-vector-newlogo.png">
@@ -38,24 +38,25 @@
 
 <!--- Navigation ---->
 <nav class="nav">
-  <div class="nav-menu flex-row">
+  <nav class="nav-menu flex-row">
     <div class="nav-brand">
-    <a href="#" class="text-white">TCG</a>
+      <a href="index.html"><img src="https://i.ibb.co/hcskmyL/tcg-logo-tiny.png" alt="tcg-logo-tiny" border="0"></a>
+
   </div>
-  <div>
-    <ul class="nav-items">
+  <h1><a href="index.html"><img src="./images/tgc_blue.png" alt="tcg-logo-tiny" border="0"></a></h1>
+  <div class="element">
+    <ul class="nav-items" id="navList">
       <li class="nav-link"><a href="index.html">Home</a></li>
       <li class="nav-link"><a href="about.html">Info</a></li>
       <li class="nav-link"><a href="gallery.html">Gallery</a></li>
       <li class="nav-link"><a href="contact.html">Contact</a></li>
       <li class="nav-link"><a href="services.html">Services</a></li>
       </ul>
+
+      <a href="#" onclick="navData()" class="navIcon">
+        <i class="fas fa-bars"></i>
+      </a>
   </div>
-  <div>
-  <div class="social text">
-    <a href="#"><i class="fab fa-instagram"></i></a>
-    </div>
-    </div>
 
 </nav>
 
