--- a/services.html
+++ b/services.html
@@ -12,7 +12,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 
-    <title>TCG | Services</title>
+    <title>TGC | Services</title>
 
 <!-- page-icon --->
 <link rel="shortcut icon" href="#">
@@ -41,9 +41,10 @@
 <nav class="nav">
   <nav class="nav-menu flex-row">
     <div class="nav-brand">
-    <a href="index.html"><img src="https://i.ibb.co/hcskmyL/tcg-logo-tiny.png" alt="tcg-logo-tiny" border="0"></a>
+      <a href="index.html"><img src="https://i.ibb.co/hcskmyL/tcg-logo-tiny.png" alt="tcg-logo-tiny" border="0"></a>
+
   </div>
-  <h1>TCG</h1>
+  <h1><a href="index.html"><img src="./images/tgc_blue.png" alt="tcg-logo-tiny" border="0"></a></h1>
   <div class="element">
     <ul class="nav-items" id="navList">
       <li class="nav-link"><a href="index.html">Home</a></li>
@@ -69,15 +70,13 @@
 
           <div class="about-content">
 <h4>Social Media Advertising</h4>
-<p>We help clients come up with a strategy for your campaign and then create the perfect ads for client needs. And to top it off we manage the ads for Facebook & Instagram and optimize them for success as we go. This plan is a mixture of all of our services from creative to strategy and is ongoing monthly with results reporting. It can be cancelled but to start we recommend at least 3 months to see true results.</p>
+<p>We help clients come up with a strategy for campaigns, creating the perfect ads for client needs. We manage the ads for Facebook & Instagram and optimize them for success. This plan is a mixture of all of our services from creative to strategy and is ongoing monthly with results reporting. We recommend a 90 day commitment for best results.</p>
 
 <h4>Video Production</h4>
-<p>This is for people who need a professional crew to film for their events, launches or specific commercials. We bring a team of Hollywood level filmmakers together and help you achieve the highest quality video for your commercial events. (Emphasis on events, commercials, & courses for this, we do other things but that’s what we want to niche down to).
-  Price: varies by crew size and number of days</p>
+<p>We will provide a professional crew to film for events, launches, commercials, and more. We bring a team of industry leading filmmakers together to help you achieve the highest quality media content.</p>
 
 <h4>Photography</h4>
-<p>Our main focus is commercial, fashion, and portrait photography. We put an emphasis on conceptual shoots and editorial photography.
-  Price: starting at $300 per shoot</p>
+<p>Our main focus is commercial, fashion, and portrait photography. We put an emphasis on conceptual shoots and editorial photography.</p>
 
 <h4>Course Creation</h4>
 <p>Whether you’re a veteran in the digital product arena, or looking to take your first step into it, We can help you create your next online course. We help to organize lesson plans and edit the films to provide as much clarity as possible. (This is obviously a subset of video production but it is more expensive and niche so we want to let people know specifically that this is a specialty).</p>
